# palladium

./: .dockerignore  .gitignore  Cargo.toml  FULL_TODO.md  LICENSE  build-web.sh  build.dockerfile  roadmap.md  static  tests.sh
built/: index.html  palladium.js  palladium.wasm
loader/: Cargo.toml
loader/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs
main/src/components/: mod.rs
main/src/game_state/: mod.rs
main/src/resources/: mod.rs
main/src/skills/: mod.rs
main/src/systems/camera_helpers/: mod.rs
main/src/systems/input/: hack_callback_handler.rs  mod.rs  player_move.rs  toggle_hack.rs  toggle_talk.rs
main/src/systems/render/: centered_image_renderer.rs  chars_renderer.rs
main/src/systems/turn_state_helpers/: mod.rs
main/src/systems/update/: breathe.rs  door_update.rs  fake_space.rs  mod.rs  npc_move.rs  saves.rs  visibility.rs
main/src/timer/: mod.rs
main/src/world/map/: params.rs
main/static/config/: map_params.ron
resources/: map_params.ron  skills.ron
src/: main.rs  numerics.rs  rng.rs  visibility.rs
src/components/: mod.rs
src/constants/: mod.rs
src/game_state/: mod.rs
src/maps/: mod.rs  rand_gen.rs
src/numerics/: mod.rs
src/panel/: game_panel.rs  license_panel.rs  menu_panel.rs  mod.rs  quit_panel.rs
src/panel/menu_panel/: license_panel.rs  mod.rs  quit_panel.rs
src/resources/: mod.rs
src/rng/: mod.rs
src/skills/: mod.rs
src/state/: mod.rs
src/systems/: mod.rs
src/systems/dialogue_helpers/: mod.rs
src/systems/input/: dialogue_controls.rs  mod.rs  player_move.rs  quit.rs  talk_callback_handler.rs  toggle_controls.rs  toggle_hack.rs  visibility.rs
src/systems/render/: centered_image_renderer.rs  chars_renderer.rs  controls_renderer.rs  mod.rs  oxygen_overlay.rs
src/systems/render/image_render_helper/: mod.rs
src/systems/start/: mod.rs
src/systems/turn_state_helpers/: mod.rs
src/systems/update/: breathe.rs  door_update.rs  fake_space.rs  mod.rs  oxygen_spread.rs  player_not_moved.rs  saves.rs  upkeep.rs  visibility.rs
src/timer/: mod.rs
src/ui/: mod.rs  visibility.rs
src/world/: mod.rs
src/world/map/: mod.rs  rand_gen.rs
static/config/: map_params.ron
