[package]
name = "palladium"
version = "0.1.0"
authors = ["Richard Rast <richard.rast@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "*"
rand = "0.6"
# More features: "collisions", "complex_shapes", "immi_ui", "sounds", gamepads
quicksilver = { version = "0.3.6", default-features = false, features = ["fonts", "saving"] }