[package]
name = "palladium"
version = "0.2.0"
authors = ["Richard Rast <richard.rast@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "*"
rand = "0.6"
specs = "0.14.3"
specs-derive = "0.4.0"
# More features: "collisions", "complex_shapes", "immi_ui", "sounds", gamepads
quicksilver = { version = "0.3.6", default-features = false, features = ["fonts", "saving"] }
